<resources>
    <string name="app_name">GithubBrowser</string>
    <string name="login_title">Login Fragment</string>
    <string name="prompt_username">Github.com Username</string>
    <string name="prompt_access_token">Github.com Personal Access Token</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_sign_in">Login</string>
    <string name="login_failed_message">Login failed, please check access token and try again</string>
    <string name="load_user_failed_message">Failed to load user info</string>
    <string name="load_repository_failed_message">Failed to load the repository list, swipe to try again</string>
    <string name="load_commits_failed_message">Failed to load commits, swipe to try again</string>
    <string name="search_commits">Search Commits</string>
</resources>
